@@ -27,6 +27,7 @@
  * + All charts now use the same SaveImage dialog with option for many different image formats, which makes exporting a chart nice experience
  * = Fixed bug in plot(f(x,y)) TSL function which made user unable to change chart area values (xmin,xmax, ymin, ymax)
  * = Unified Chart (edit) menus in GUI and scripting (they are now inside their own class, reusable), removed any code redundancies and errors (in chart3d in scripting export was generating invalid names)
+ * = Cleanup for Chart3D
 
 
  ### --------- Version 2.0.0ß - beta -----------  04.03.2016 17:42
